[package]
name = "lock_ext"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
description = "Extensions to std::sync::Mutex"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[dependencies]
parking_lot = "0.10.2"
