[package]
name = "memcache"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "Client for accessing Memcache. Noop crate for now"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"
include = ["src/*.rs"]

[dependencies]
memcache_common = { path = "common", version = "0.1.0" }
