[package]
name = "netstring"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs"]

[dependencies]
anyhow = "1.0"
bytes = { version = "0.5", features = ["serde"] }
thiserror = "1.0"
tokio-util = "0.2"

[dev-dependencies]
quickcheck = "0.9"
