[package]
name = "netstring"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "Tokio based implementation of netstrings"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"

[dependencies]
anyhow = "1.0"
bytes = { version = "0.5", features = ["serde"] }
thiserror = "1.0"
tokio-util = { version = "0.2", features = ["codec", "udp"] }

[dev-dependencies]
quickcheck = "0.9"
