[package]
name = "netstring"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
description = "Tokio based implementation of netstrings"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
bytes = { version = "0.5", features = ["serde"] }
thiserror = "1.0"
tokio-util = { version = "0.2", features = ["codec", "udp"] }

[dev-dependencies]
quickcheck = "0.9"
