[package]
name = "panichandler"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "Makes it easier to define a handler for panics"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "test"
path = "test/test.rs"

[[bin]]
name = "test_deep"
path = "test/test_deep.rs"

[[bin]]
name = "testmultithread"
path = "test/testmultithread.rs"

[[bin]]
name = "testmultithread_abort"
path = "test/testmultithread_abort.rs"

[[test]]
name = "panichandler_tests"
path = "test/testrunner.rs"

[dependencies]
backtrace = "0.3"
libc = "0.2.86"

[dev-dependencies]
anyhow = "1.0"
assert_cmd = "0.12"
predicates  = "1"
