[package]
name = "scuba_sample"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs"]

[dependencies]
fbinit = { path = "../fbinit" }
rand = { version = "0.7", features = ["small_rng"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }

[dev-dependencies]
assert_matches = "1.3"
nonzero_ext = "0.2"
quickcheck = "0.9"
rand_chacha = "0.2"
