[package]
name = "scuba_sample"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
description = "Helps build scuba samples"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[dependencies]
fbinit = { version = "0.1.0", path = "../fbinit" }
rand = { version = "0.7", features = ["small_rng"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }

[dev-dependencies]
assert_matches = "1.5"
nonzero_ext = "0.2"
quickcheck = "0.9"
rand_chacha = "0.2"
