[package]
name = "secure_utils"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "Crate with useful security utilities"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"

[dependencies]
anyhow = "1.0"
hex = "0.4"
lazy_static = "1.0"
libc = "0.2"
openssl = "0.10"
openssl-sys = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
slog = { version = "2.5", features = ["max_level_debug"] }
