[package]
name = "secure_utils"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
description = "Crate with useful security utilities"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
hex = "0.4"
lazy_static = "1.0"
libc = "0.2.86"
openssl = "0.10.35"
openssl-sys = "0.9"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
slog = { version = "2.5", features = ["max_level_trace"] }
