[package]
name = "serde-starlark"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "GPLv2+"
include = ["src/*.rs", "test/test.rs"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "test"
path = "test/test.rs"

[dependencies]
maplit = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
